--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div class="item__image mx-4">
-    <img class="image image--md rounded shadow" src="/assets/profile.png"/>
+    <img class="image image--md rounded shadow" src="/assets/images/profile.png"/>
   </div>
 </div>
